# mongodb_rust_api_gateway

./: .env.example  AGENTS.md  Cargo.toml  README.md  WARP.md  WORKLOG.md
docs/: request_logging.md
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs
tests/: README.md  integration_test.rs
tests/common/: mod.rs
