[package]
name = "hello_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures = "0.3"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

[dev-dependencies]
hyper = { version = "1", features = ["full"] }
