[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
http = "0.2"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
